--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -90,7 +90,7 @@ function force_change() {
 </script>
   </head>
   <body id="switch2">
-    <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
+    <div class="main_title"><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
     <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
     <br />
     <br />
@@ -124,5 +124,6 @@ function force_change() {
     <a href="../" target="_self">
       <div class="btn btn-primary home_button"><i class="fas fa-home"></i></div>
   </a>
+  <div class="btn btn-danger home_button2" onclick="force_change();" ><i class="fa-regular fa-star"></i></div>
   </body>
 </html>
