--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -98,7 +98,7 @@ function force_change() {
     <div class="page_header" onclick="location.reload();">Homecoming</div>
     <hr />
     <br />
-    <div class="body_display">
+    <div class="main_block">
       <a href="https://forums.homecomingservers.com/" target="_blank">
         <div class="menu_block">
           <div class="sub_menu"><img src="../images/coh-hc.png" class="menu_icon_main"></div>
