--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -19,9 +19,9 @@
     <link rel="icon" sizes="384x384" href="../images/icons/icon-384x384.png">
     <link rel="icon" sizes="512x512" href="../images/icons/icon-512x512.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/codex.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../css/all.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
       integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"
@@ -123,7 +123,7 @@ function force_change() {
     </div>
     <a href="../" target="_self">
       <div class="btn btn-primary home_button"><i class="fas fa-home"></i></div>
-  </a>
-  <div class="btn btn-danger home_button2" onclick="force_change();" ><i class="fa-regular fa-star"></i></div>
+    </a>
+    <div class="btn btn-danger home_button2" onclick="force_change();"><i class="fa-regular fa-star"></i></div>
   </body>
 </html>
