--- a/tools/index.html
+++ b/tools/index.html
@@ -106,6 +106,12 @@
                     <div class="sub_menu"><img src="../enhancements/images/training/TO-Training-Heal.png" class="display_box_tool"></div>
                     <div class="sub_menu_text_tools" style="margin-top:-5px">Enhancement<br />Shopping List</div>
                </div>
+               <a href="https://n15g.github.io/badger/" target="_blank">
+                    <div class="tools_display">
+                         <div class="sub_menu"><img src="../images/badger.png" class="display_box_tool"></div>
+                         <div class="sub_menu_text_tools">Badger</div>
+                    </div>
+               </a>
                <a href="https://cod.uberguy.net/" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/Naturalbadge.png" class="display_box_tool"></div>
