--- a/tools/index.html
+++ b/tools/index.html
@@ -112,6 +112,12 @@
                          <div class="sub_menu_text_tools">Badger</div>
                     </div>
                </a>
+               <a href="https://github.com/emersonrp/bindcontrol" target="_blank">
+                    <div class="tools_display">
+                         <div class="sub_menu"><img src="../images/mastermind.png" class="display_box_tool"></div>
+                         <div class="sub_menu_text_tools">BindControl</div>
+                    </div>
+               </a>
                <a href="https://cod.uberguy.net/" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/Naturalbadge.png" class="display_box_tool"></div>
