modified index.html in .

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"
       integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-      <script language="javascript" type="text/javascript">
+    <script language="javascript" type="text/javascript">
       var images = new Array()
       var images2 = new Array()
       var images3 = new Array()
@@ -80,7 +80,7 @@
               }
       }
       </script>
-      <script>
+    <script>
       function force_change() {
       changeImage();
       changeImage2();
@@ -102,59 +102,59 @@
       <a href="./cohmaps/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/Mutationbadge.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Paragon<br />City Maps</div>
+          <div class="sub_menu_text_main">City Maps</div>
         </div>
       </a>
 
       <a href="./tools/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/ScienceOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="padding-top:0px;">Character<br />Tools</div>
+          <div class="sub_menu_text_main" style="padding-top:0px;">Tools</div>
         </div>
 
         <a href="./comics/" target="_self">
           <div class="menu_block">
             <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
-            <div class="sub_menu_text_main">Comics<br />Archive</div>
+            <div class="sub_menu_text_main">Comics</div>
           </div>
         </a>
 
         <a href="./manuals/" target="_self">
           <div class="menu_block">
             <div class="sub_menu"><img src="images/TechnologyOriginIcon.png" class="menu_icon_main"></div>
-            <div class="sub_menu_text_main">Game<br />Manuals</div>
+            <div class="sub_menu_text_main">Manuals</div>
           </div>
         </a>
 
-        <a href="./story_bible/" target="_self">
+          <a href="./story_bible/" target="_self">
+            <div class="menu_block">
+              <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
+              <div class="sub_menu_text_main">Story<br />Bible</div>
+            </div>
+          </a>
+
+        </a>
+        <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
           <div class="menu_block">
-            <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
-            <div class="sub_menu_text_main">Story<br />Bible</div>
+            <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
+            <div class="sub_menu_text_main">Paragon<br />Wiki (Archive)</div>
+          </div>
+        </a>
+        <a href="../homecoming/" target="_self">
+          <div class="menu_block">
+            <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+            <div class="sub_menu_text_main">City of Heroes <br /><small>Homecoming</small></div>
+          </div>
+        </a>
+        <a href="./rebirth/" target="_self">
+          <div class="menu_block">
+            <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+            <div class="sub_menu_text_main">City of Heroes <br /><small>Rebirth</small></div>
           </div>
         </a>
 
-      </a>
-      <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
-          <div class="sub_menu_text_main">Paragon<br />Wiki (Archive)</div>
-        </div>
-      </a>
-      <a href="../homecoming/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br /><small>Homecoming</small></div>
-        </div>
-      </a>
-      <a href="./rebirth/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br /><small>Rebirth</small></div>
-        </div>
-      </a>
+      </div>
+      <div class="btn btn-danger home_button2" onclick="force_change();"><i class="fa-regular fa-star"></i></div>
 
-    </div>
-    <div class="btn btn-danger home_button2" onclick="force_change();" ><i class="fa-regular fa-star"></i></div>
-
-  </body>
-</html>
+    </body>
+  </html>
