modified index.html in .

--- a/index.html
+++ b/index.html
@@ -102,59 +102,61 @@
       <a href="./cohmaps/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/Mutationbadge.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City Maps</div>
+          <div class="sub_menu_text_main">Paragon<br />City Maps</div>
         </div>
       </a>
 
       <a href="./tools/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/ScienceOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="padding-top:0px;">Tools</div>
+          <div class="sub_menu_text_main" style="padding-top:0px;">Game<br />Tools</div>
         </div>
-
+        <hr />
         <a href="./comics/" target="_self">
           <div class="menu_block">
             <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
-            <div class="sub_menu_text_main">Comics</div>
+            <div class="sub_menu_text_main">Comics<br />Archive</div>
           </div>
         </a>
 
         <a href="./manuals/" target="_self">
           <div class="menu_block">
             <div class="sub_menu"><img src="images/TechnologyOriginIcon.png" class="menu_icon_main"></div>
-            <div class="sub_menu_text_main">Manuals</div>
+            <div class="sub_menu_text_main">Game<br />Manuals</div>
           </div>
         </a>
 
-          <a href="./story_bible/" target="_self">
-            <div class="menu_block">
-              <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
-              <div class="sub_menu_text_main">Story<br />Bible</div>
-            </div>
-          </a>
-
-        </a>
-        <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
+        <a href="./story_bible/" target="_self">
           <div class="menu_block">
-            <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
-            <div class="sub_menu_text_main">Paragon<br />Wiki (Archive)</div>
-          </div>
-        </a>
-        <a href="../homecoming/" target="_self">
-          <div class="menu_block">
-            <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
-            <div class="sub_menu_text_main">City of Heroes <br /><small>Homecoming</small></div>
-          </div>
-        </a>
-        <a href="./rebirth/" target="_self">
-          <div class="menu_block">
-            <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-            <div class="sub_menu_text_main">City of Heroes <br /><small>Rebirth</small></div>
+            <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
+            <div class="sub_menu_text_main">Story<br />Bible</div>
           </div>
         </a>
 
-      </div>
-      <div class="btn btn-danger home_button2" onclick="force_change();"><i class="fa-regular fa-star"></i></div>
+      </a>
+      <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
+          <div class="sub_menu_text_main">Paragon<br />Wiki (Archive)</div>
+        </div>
+      </a>
 
-    </body>
-  </html>
+      <hr />
+      <a href="../homecoming/" target="_self">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">City of Heroes <br /><small>Homecoming</small></div>
+        </div>
+      </a>
+      <a href="./rebirth/" target="_self">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">City of Heroes <br /><small>Rebirth</small></div>
+        </div>
+      </a>
+
+    </div>
+    <div class="btn btn-danger home_button2" onclick="force_change();"><i class="fa-regular fa-star"></i></div>
+
+  </body>
+</html>
