--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
           <div class="sub_menu"><img src="images/ScienceOriginIcon.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main" style="padding-top:0px;">Game<br />Tools</div>
         </div>
-
+      </a>
+      </div>
+      <hr/>
+      <div class="main_block">
         <a href="./comics/" target="_self">
           <div class="menu_block">
             <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
@@ -132,14 +135,15 @@
             <div class="sub_menu_text_main">Story<br />Bible</div>
           </div>
         </a>
-
-      </a>
       <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
           <div class="sub_menu_text_main">Paragon<br />Wiki (Archive)</div>
         </div>
       </a>
+    </div>
+    <hr/>
+    <div class="main_block">
       <a href="../homecoming/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
