modified index.html in .

--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
         </div>
       </a>
     </div>
-    <hr />
     <div class="main_block">
       <a href="../homecoming/" target="_self">
         <div class="menu_block">
@@ -127,12 +126,11 @@
         </div>
       </a>
     </div>
-    <hr/>
     <div class="main_block">
       <a href="./comics/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Comics<br />Archive</div>
+          <div class="sub_menu_text_main">Comics<br /><small>&</small><br/>Fanzines</div>
         </div>
       </a>
       <a href="./manuals/" target="_self">
