modified index.html in .

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <a href="./manuals/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/TechnologyOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">COH & COV<br/>Game Manuals</div>
+          <div class="sub_menu_text_main">COH &amp; COV<br/>Manuals</div>
         </div>
       </a>
       <a href="./story_bible/" target="_self">
