--- a/story_bible/index.html
+++ b/story_bible/index.html
@@ -178,7 +178,7 @@ function force_change() {
 
       <div class="sb_display" onclick="window.open('./Zone/Paragon City Sourcebook Zone Outline.pdf','_blank')">
         <div class="sub_menu"><img src="../images/zone.png" class="display_box_sb"></div>
-        <div class="sub_menu_text_sb">Paragon City<br />Sourcebook Zone<br />Outline</div>
+        <div class="sub_menu_text_sb">Paragon City<br />Sourcebook<br/>Zone Outline</div>
       </div>
 
       <div class="sb_display" onclick="window.open('./Zone/peregrine-rikti.pdf','_blank')">
