--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <a href="./story_bible/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Story<br />Bible</div>
+          <div class="sub_menu_text_main">Story Bible</div>
         </div>
       </a>
       <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
