modified index.html in .

--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
       <a href="./cohmaps/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/Mutationbadge.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Paragon<br />City Maps</div>
+          <div class="sub_menu_text_main" style="margin-top:5px;">Paragon<br />City Maps</div>
         </div>
       </a>
       <a href="./tools/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/ScienceOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="margin-top:5px;">Game Tools</div>
+          <div class="sub_menu_text_main" style="margin-top:20px;">Game Tools</div>
         </div>
       </a>
     </div>
@@ -116,13 +116,13 @@
       <a href="../homecoming/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br /><small>Homecoming</small></div>
+          <div class="sub_menu_text_main" style="margin-top:5px;">City of Heroes <br /><small>Homecoming</small></div>
         </div>
       </a>
       <a href="./rebirth/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br /><small>Rebirth</small></div>
+          <div class="sub_menu_text_main" style="margin-top:5px;">City of Heroes <br /><small>Rebirth</small></div>
         </div>
       </a>
     </div>
@@ -136,19 +136,19 @@
       <a href="./manuals/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/TechnologyOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">COH &amp; COV<br/>Manuals</div>
+          <div class="sub_menu_text_main" style="margin-top:5px;">COH &amp; COV<br/>Manuals</div>
         </div>
       </a>
       <a href="./story_bible/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="margin-top:5px;">Story Bible</div>
+          <div class="sub_menu_text_main" style="margin-top:20px;">Story Bible</div>
         </div>
       </a>
       <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
-          <div class="sub_menu_text_main">Paragon<br />Wiki (Archive)</div>
+          <div class="sub_menu_text_main" style="margin-top:5px;">Paragon<br />Wiki (Archive)</div>
         </div>
       </a>
     </div>
