modified index.html in tools

--- a/tools/index.html
+++ b/tools/index.html
@@ -118,6 +118,12 @@
                          <div class="sub_menu_text_tools">BindControl</div>
                     </div>
                </a>
+               <a href="https://cityofbadgers.com" target="_blank">
+                    <div class="tools_display">
+                         <div class="sub_menu"><img src="../images/defender.png" class="display_box_tool"></div>
+                         <div class="sub_menu_text_tools">City of Badgers</div>
+                    </div>
+               </a>
                <a href="https://cod.uberguy.net/" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/Naturalbadge.png" class="display_box_tool"></div>
