--- a/tools/index.html
+++ b/tools/index.html
@@ -109,19 +109,19 @@
                <a href="https://n15g.github.io/badger/" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/badger.png" class="display_box_tool"></div>
-                         <div class="sub_menu_text_tools">Badger</div>
+                         <div class="sub_menu_text_tools">Badger<br/><small>Badge Tracker</small></div>
                     </div>
                </a>
                <a href="https://github.com/emersonrp/bindcontrol" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/mastermind.png" class="display_box_tool"></div>
-                         <div class="sub_menu_text_tools">BindControl</div>
+                         <div class="sub_menu_text_tools">BindControl<br/><small>Keybind Control</small></div>
                     </div>
                </a>
                <a href="https://cityofbadgers.com" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/defender.png" class="display_box_tool"></div>
-                         <div class="sub_menu_text_tools">City of Badgers</div>
+                         <div class="sub_menu_text_tools">City of Badgers<br/><small>Badge Tracker</small></div>
                     </div>
                </a>
                <a href="https://cod.uberguy.net/" target="_blank">
