modified index.html in tools

--- a/tools/index.html
+++ b/tools/index.html
@@ -104,24 +104,24 @@
           <div class="body_display">
                <div class="tools_display" onclick="window.open('../enhancements/index.php','_self')">
                     <div class="sub_menu"><img src="../enhancements/images/training/TO-Training-Heal.png" class="display_box_tool"></div>
-                    <div class="sub_menu_text_tools" style="margin-top:-5px">Enhancement<br />Shopping List</div>
+                    <div class="sub_menu_text_tools" style="margin-top:-5px">Enhancement<br /><span style="font-size:15px;">Shopping List</span></div>
                </div>
                <a href="https://n15g.github.io/badger/" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/badger.png" class="display_box_tool"></div>
-                         <div class="sub_menu_text_tools">Badger<br/><small>Badge Tracker</small></div>
+                         <div class="sub_menu_text_tools">Badger<br/><span style="font-size:15px;">Badge Tracker</span></div>
                     </div>
                </a>
                <a href="https://github.com/emersonrp/bindcontrol" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/mastermind.png" class="display_box_tool"></div>
-                         <div class="sub_menu_text_tools">BindControl<br/><small>Keybind Control</small></div>
+                         <div class="sub_menu_text_tools">BindControl<br/><span style="font-size:15px;">Keybind Control</span></div>
                     </div>
                </a>
                <a href="https://cityofbadgers.com" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/defender.png" class="display_box_tool"></div>
-                         <div class="sub_menu_text_tools">City of Badgers<br/><small>Badge Tracker</small></div>
+                         <div class="sub_menu_text_tools">City of Badgers<br/><span style="font-size:15px;">Badge Tracker</span></div>
                     </div>
                </a>
                <a href="https://cod.uberguy.net/" target="_blank">
