modified index.html in tools

--- a/tools/index.html
+++ b/tools/index.html
@@ -127,13 +127,13 @@
                <a href="https://cod.uberguy.net/" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/Naturalbadge.png" class="display_box_tool"></div>
-                         <div class="sub_menu_text_tools">City of Data<span style="font-size:15px;">Game Data</span></div>
+                         <div class="sub_menu_text_tools">City of Data<br/><span style="font-size:15px;">Game Data</span></div>
                     </div>
                </a>
                <a href="https://midsreborn.com/" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/statesman.png" class="display_box_tool"></div>
-                         <div class="sub_menu_text_tools">MIDS Reborn<span style="font-size:15px;">Character Builder</span></div>
+                         <div class="sub_menu_text_tools">MIDS Reborn<br/><span style="font-size:15px;">Character Builder</span></div>
                     </div>
                </a>
                <a href="https://mods.cityofheroes.dev/" target="_blank">
