--- a/index.html
+++ b/index.html
@@ -113,16 +113,10 @@
       </a>
     </div>
     <div class="main_block">
-      <a href="../homecoming/" target="_self">
+      <a href="../servers/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="margin-top:5px;">City of Heroes <br /><small>Homecoming</small></div>
-        </div>
-      </a>
-      <a href="./rebirth/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="margin-top:5px;">City of Heroes <br /><small>Rebirth</small></div>
+          <div class="sub_menu_text_main" style="margin-top:5px;">City of Heroes <br /><small>Servers</small></div>
         </div>
       </a>
     </div>
