--- a/servers/index.html
+++ b/servers/index.html
@@ -99,26 +99,56 @@ function force_change() {
     <hr />
     <br />
     <div class="main_block">
+
+      <a href="https://cityofheroes.asmodei.net/" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="../images/Asmodei.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Asmodei</div>
+        </div>
+      </a>
+
       <a href="https://forums.homecomingservers.com/" target="_blank">
         <div class="menu_block">
           <div class="sub_menu"><img src="../images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Homecoming <br />Forums</div>
+          <div class="sub_menu_text_main">Homecoming</div>
         </div>
       </a>
 
-      <a href="https://homecoming.wiki/wiki/Main_Page" target="_blank">
+      <a href="https://play.cityofheroesrebirth.com/" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="../images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Homecoming<br />Wiki</div>
+          <div class="sub_menu"><img src="../images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Rebirth</div>
+        </div>
+      </a>
+      <a href="https://thunderspy.net/" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="../images/logocrop.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Thunderspy</div>
         </div>
       </a>
 
-      <a href="https://discord.com/invite/cityofheroes" target="_blank">
+      <a href="https://cityofheroesunity.com/portal/public/" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="../images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Homecoming<br />Discord</div>
+          <div class="sub_menu"><img src="../images/Cake_Logo_Icon.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Unity Union</div>
         </div>
       </a>
+
+      <a href="https://cityofheroes.dev/" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="../images/victory.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Victory</div>
+        </div>
+      </a>
+
+      <a href="https://evolution-newdawn.com/" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="../images/unity_logo.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">We Have Cake</div>
+        </div>
+      </a>
+
+
 
     </div>
     <a href="../" target="_self">
