modified index.html in servers

--- a/servers/index.html
+++ b/servers/index.html
@@ -95,7 +95,7 @@ function force_change() {
     <br />
     <br />
     <hr />
-    <div class="page_header" onclick="location.reload();">Homecoming</div>
+    <div class="page_header" onclick="location.reload();">Servers</div>
     <hr />
     <br />
     <div class="main_block">
