modified index.html and index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
     <hr />
     <br />
     <div class="main_block">
-
+      <a href="../servers/" target="_self">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/controller.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main" style="margin-top:5px;">City of Heroes <br /><small>Servers</small></div>
+        </div>
+      </a>
       <a href="./cohmaps/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/Mutationbadge.png" class="menu_icon_main"></div>
@@ -111,26 +116,16 @@
           <div class="sub_menu_text_main" style="margin-top:20px;">Game Tools</div>
         </div>
       </a>
-    </div>
-    <div class="main_block">
-      <a href="../servers/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="margin-top:5px;">City of Heroes <br /><small>Servers</small></div>
-        </div>
-      </a>
-    </div>
-    <div class="main_block">
       <a href="./comics/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Comics<br /><small>&</small><br/>Fanzines</div>
+          <div class="sub_menu_text_main">Comics<br /><small>&</small><br />Fanzines</div>
         </div>
       </a>
       <a href="./manuals/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/TechnologyOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="margin-top:5px;">COH &amp; COV<br/>Manuals</div>
+          <div class="sub_menu_text_main" style="margin-top:5px;">COH &amp; COV<br />Manuals</div>
         </div>
       </a>
       <a href="./story_bible/" target="_self">
