--- a/servers/index.html
+++ b/servers/index.html
@@ -102,7 +102,7 @@ function force_change() {
 
       <a href="https://cityofheroes.asmodei.net/" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="../images/Asmodei.png" class="menu_icon_main"></div>
+          <div class="sub_menu"><img src="../images/asmodei.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main">Asmodei</div>
         </div>
       </a>
